Accuracy increased and Warnings decreased